# Full_Stack_Instant_Messaging_Project-By-CPP

./: .gitignore  README.md  RUN.md
email_varify_server/: README.md  config.example.json  config.js  const.js  email.js  package-lock.json  package.json  proto.js  redis.js  server.js
email_varify_service/: README.md  config.example.json  config.js  message.proto  package-lock.json  package.json  server.js
front_end/XingChat/: HttpMgr.cpp  HttpMgr.h  XingChat.pro  XingChat.qrc  global.cpp  global.h  login.cpp  login.h  login.ui  main.cpp  mainwindow.ui  register.cpp  register.h  register.ui  singleton.h
gate_server/: AsioIOServicePool.cpp  AsioIOServicePool.h  CMakeLists.txt  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  DESIGN.md  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  RedisMgr.cpp  RedisMgr.h  VerifyEmailServiceClient.cpp  VerifyEmailServiceClient.h  config.ini  const.h  main.cpp  urlcode.cpp  urlcode.h
gate_server/json/: jsoncpp.cpp
gate_server/json/json/: json-forwards.h  json.h
